fix: radio/checkbox horizontal wrapping

--- a/src/components/reusable/checkbox/checkboxGroup.scss
+++ b/src/components/reusable/checkbox/checkboxGroup.scss
@@ -14,6 +14,7 @@ fieldset {
 
 .horizontal {
   display: flex;
+  flex-wrap: wrap;
   align-items: baseline;
   gap: 12px;
 }
